# crm_django_ninja

./: .gitignore  README.md  main.py  pyproject.toml
src/: manage.py
src/catalog/: models.py
src/catalog/migrations/: 0001_initial.py
src/core/: api.py  settings.py  urls.py
src/customer/: manager.py  models.py
src/customer/migrations/: 0001_initial.py
src/group/: models.py
src/group/migrations/: 0001_initial.py  0002_initial.py
src/marketing/: models.py
src/marketing/migrations/: 0001_initial.py
src/order/: models.py
src/sales/: models.py
src/sales/migrations/: 0001_initial.py
src/toolkit/: settings.py
